Avoid scrolling while drawing on mobile

--- a/src/css/components/_PixelGrid.css
+++ b/src/css/components/_PixelGrid.css
@@ -4,6 +4,7 @@
   min-height: 1px;
   margin: 0 auto;
   width: 90%;
+  touch-action: none;
 
   div {
     float: left;
